--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
+<!DOCTYPE html>
 <html>
   <head>
+	<title>imgm</title>
+	<meta charset="utf-8">
+	<meta name="description" content="Image Map Game Maker">
+	   <meta name="author" content="Léon Lenclos">
     <script src="lib/p5.js"></script>
 	<script src="lib/scenemanager.js"></script>
 	<script src="lib/p5.collide2d.js"></script>
-	<script src="sketch.js"></script>
+	<script src="main.js"></script>
+	<script src="home.js"></script>
+	<script src="importImage.js"></script>
+	<script src="editScene.js"></script>
+	<script src="editGate.js"></script>
+	<script src="playGame.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 	<div id="editorContainer">
-	  <div id="helpContainer">
-		
-	  </div>
+	  <h1>imgm (v.0.1)</h1>
 	  <div id="frameContainer">
-		<div id="gameContainer"></div>
+		<div id="imgmGame"></div>
 		<div id="canvasContainer"></div>
 	  </div>
 	  <div id="toolPanelsContainer"></div>
